Fix editor canvas stretching to ridiculous heights

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -5,7 +5,6 @@
 
   .chart-container {
     flex: 1;
-    display: flex;  /* causes 100% height in child */
     margin: 5px;  /* Add margin so focus outline is visible */
   }
 
